<resources>
    <string name="app_name">SuitCase</string>
    <string name="logo">Logo</string>
    <string name="unleash_your_wanderlust">\"Unleash your Wanderlust\"</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_back_louise">Welcome back,Louise</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="manage_suitcase">Manage Suitcase</string>
    <string name="revive_the_thrill_of_travel">\"Revive the thrill of travel\"\n</string>
    <string name="txt_signup">Signup</string>
    <string name="get_code">Get Code</string>
    <string name="enter_email">Enter Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="home">Home\n</string>
    <string name="about">About\n</string>
    <string name="contact">Contact</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile\n</string>
    <string name="logout">Logout\n</string>
    <string name="share">Share\n</string>
    <string name="welcome_to_suitcase">Welcome to Suitcase</string>
    <string name="menu">Menu</string>
    <string name="clothing">Clothing</string>
    <string name="medicines">Medicines</string>
    <string name="electronics">Electronics</string>
    <string name="documents">Documents</string>
    <string name="others">Others</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="add_item_page">Add Item Page</string>
    <string name="add_items">Add Items</string>
    <string name="upload_items">Upload Items</string>
    <string name="add_new_item">Add New Item</string>
    <string name="edit_icon">Edit icon</string>
    <string name="delete_icon">Delete icon</string>
    <string name="item_name">Item Name</string>
    <string name="rs_170">Rs. 170</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="enter_item_description">Enter Item Description</string>
    <string name="added_items">Added Items</string>
    <string name="s">Enter Item Price</string>
    <string name="description">Enter Item Description</string>
    <string name="devices">Devices</string>
    <string name="health">Health</string>
    <string name="list_of_health_care_items">List of Health Care Items</string>
    <string name="list_of_documents">List of Documents</string>
    <string name="purchased_items">Purchased Items</string>
    <string name="purchased_item">Purchased Items</string>
    <string name="sada">Added Items</string>
    <string name="welcome_back_login_to_suitcase">Welcome Back, Login to Suitcase</string>
</resources>