<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/baseline_home_24"/>
        <item android:id="@+id/nav_about"
            android:title="@string/about"
            android:icon="@drawable/baseline_supervisor_account_24"/>
        <item android:id="@+id/nav_items"
            android:title="@string/added_items"
            android:icon="@drawable/baseline_post_add_24"/>
        <item android:id="@+id/nav_purchase"
            android:title="@string/purchased_item"
            android:icon="@drawable/icons9"/>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="@string/profile">
            <menu>
                <item android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/baseline_home_24"/>
                <item android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/baseline_logout_24"/>
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:id="@+id/share"
            android:title="@string/share"
            android:icon="@drawable/baseline_share_24"/>
    </group>
</menu>