<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".Add_Items">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_items"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/add_img"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/upload"
    app:civ_border_width="2dp"
    app:civ_border_color="#FF000000"
    android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/add_item_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:hint="@string/enter_item_name"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:inputType="text"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/add_item_price"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:hint="@string/s"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:inputType="number"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/add_item_description"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:hint="@string/description"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:inputType="text"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/add_items"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

</LinearLayout>