<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Item"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/editImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/upload"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:hint="@string/enter_item_name"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:inputType="text"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/editPrice"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:hint="@string/enter_item_price"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:inputType="number"
        android:layout_marginTop="15dp"/>
    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="15dp"
        android:hint="@string/enter_item_description"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@drawable/custom_edittext"
        android:inputType="text"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/save"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_dark"
        android:background="@android:color/transparent"/>


</LinearLayout>