<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/signup"
        android:textColor="#2B4577"
        android:textSize="40sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:focusable="true">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="#1B8CAF"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:padding="10dp"
            android:textColorHint="#CD3131"

            android:textSize="20sp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:focusable="true">

        <EditText

            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="#1B8CAF"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="@string/email"
            android:textSize="20sp"
            android:textColor="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:focusable="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="#1B8CAF"
            android:textSize="20sp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="@string/password"
            android:textColor="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txt_cpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="#1B8CAF"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:hint="@string/confirm_password"
            android:textSize="20sp"
            android:textColor="@color/white" />


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_signup"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#031E51"
        android:text="@string/signup"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="#24034D"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="@string/login"
            android:textColor="#24034D"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>


</LinearLayout>