<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:layout_marginBottom="1dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="5dp">

        <!-- Item Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/item_Image"
            android:layout_width="92dp"
            android:layout_height="89dp"
            android:src="@drawable/img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Text Group (Name, Price, Description) -->
        <LinearLayout
            android:id="@+id/text_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toStartOf="@+id/icons_group"
            app:layout_constraintStart_toEndOf="@id/item_Image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <!-- Item Name -->
            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:maxWidth="200dp"
                android:text="@string/item_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <!-- Item Price -->
            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/rs_170"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Item Description -->
            <TextView
                android:id="@+id/item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="I Need This Product "
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Icons Group (Edit, Delete) -->
        <LinearLayout
            android:id="@+id/icons_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <!-- Edit Icon -->
            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/edit_icon"
                android:src="@drawable/baseline_edit_24"
                android:layout_marginEnd="8dp" />

            <!-- Delete Icon -->
            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/delete_icon"
                android:src="@drawable/baseline_delete_24"
                 />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
